--- a/app/components/faqBox.module.scss
+++ b/app/components/faqBox.module.scss
@@ -20,8 +20,12 @@
     justify-content: space-between;
     gap: .5rem;
     font-weight: 500;
-    font-size: 20px;
+    font-size: 18px;
     color: variables.$purple_600;
+
+    @media (min-width: 720px) {
+        font-size: 20px;
+    }
 }
 
 .answer {
