--- a/app/components/footer.module.scss
+++ b/app/components/footer.module.scss
@@ -19,11 +19,11 @@
 
 .socials {
     background-color: variables.$gold_300;
-    padding: 2rem .5rem;
+    padding: 1rem .5rem;
 
     span {
         font-weight: 600;
-        font-size: 18px;
+        font-size: 16px;
     }
 
     > div {
@@ -43,8 +43,8 @@
 .iconBox {
     background-color: rgba(217, 217, 217, 0.5);
     border: 1px solid variables.$purple_600;
-    width: 36px;
-    height: 36px;
+    width: 32px;
+    height: 32px;
     border-radius: 20px;
 
     &:hover {
