--- a/app/components/textbox.module.scss
+++ b/app/components/textbox.module.scss
@@ -1,7 +1,7 @@
 @use './variables.module.scss';
 
 .box {
-    padding: 36px 32px;
+    padding: 32px;
     width: fit-content;
     border-radius: 16px;
 
@@ -15,9 +15,13 @@
 }
 
 .p {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 500;
     line-height: 128%;
     margin-top: 16px;
     color: variables.$gray_700;
+
+    @media (min-width: 720px) {
+        font-size: 20px;
+    }
 }
