--- a/app/globals.css
+++ b/app/globals.css
@@ -1,13 +1,12 @@
 html,
 body {
   max-width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  width: 100vw;
-  overflow-x: hidden;
 }
 
 *, *::before, *::after {
